Refactor intro paragraph styles in style.css

--- a/style.css
+++ b/style.css
@@ -44,6 +44,10 @@
   line-height: 1.6;
   opacity: 0.95;
 }
+.intro p {
+  line-height: 1.6;
+  font-size: 1.1rem;
+}
 
 body {
   background-color: #f6f7fb;
